Update Compliance processes

--- a/sites/handbook/source/handbook/engineering/development/dev/manage/compliance/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/dev/manage/compliance/index.html.md.erb
@@ -13,100 +13,86 @@ title: "Compliance Group"
 {: #welcome}
 
 
-### How we work
-
+## How we work
 * In accordance with our [GitLab values](/handbook/values/).
 * Transparently: nearly everything is public, we record/livestream meetings whenever possible.
 * We get a chance to work on the things we want to work on.
 * Everyone can contribute; no silos.
   * The goal is to have product give engineering and design the opportunity to be involved with direction and issue definition from the very beginning.
-* We do an optional, asynchronous daily stand-up in our respective group stand-up channels:
+* We do an optional, asynchronous daily stand-up in our stand-up channel:
   * Govern:Compliance [#g_govern_compliance_daily](https://gitlab.slack.com/archives/C013E163FD0)
 
-#### Code Review
+### Code Review
+<%= partial("handbook/engineering/development/dev/manage/compliance/code_review.erb") %>
 
-Because this group works on components of the application that have a [far-reaching impact](/handbook/engineering/development/#reducing-the-impact-of-far-reaching-work), we take these extra steps in order to reduce our risk of a production incident:
-
-1. Our team's merge requests should be assigned to another Compliance team member for first review in order to build more institutional knowledge across the team.
-1. Compliance merge requests will clearly define  whether a feature flag is required. This is an effort to remind engineers about feature flag usage, but also to challenge reasoning as to why changes do not need to be behind a feature flag.
-1. If a feature flag is used then a feature flag [rollout plan](https://about.gitlab.com/handbook/engineering/development/processes/rollout-plans/) will be created. Support (`#support_gitlab-com`) will also be [notified](https://gitlab.com/gitlab-org/gitlab/-/blob/master/.gitlab/issue_templates/Feature%20Flag%20Roll%20Out.md?plain=1#L94) if necessary. 
-1. Compliance related merge requests require a review by a [Compliance Engineer](https://gitlab.com/groups/gitlab-org/govern/compliance/-/group_members?with_inherited_permissions=exclude). This is guarded by using the `CODEOWNERS` feature of GitLab.
-
-### How we prioritize for a milestone
-We prioritize using the [cross-functional prioritization] (https://about.gitlab.com/handbook/product/cross-functional-prioritization/). The Product Manager will prioritize `type::feature` issues, the Engineering Manager will prioritize `type::maintenance` issues, and the Quality Manager will prioritize `type::bug` issues. From there, we are able to select a ratio of the top issues to be planned for the milestone by using our [cross-functional issue board](https://gitlab.com/groups/gitlab-org/-/boards/4657720?milestone_title=15.4&label_name[]=group%3A%3Acompliance). Our target ratio is to plan 60% features, 30% maintenance, and 10% bugs per milestone. The data below helps us understand our overall cross-functional status.
-  
-#### Prioritization
-<%= partial "handbook/engineering/development/dev/manage/prioritization.erb", locals: { filter_value: 'compliance' } %>
-
-#### Organizing the work
-
-<%= partial("handbook/engineering/development/dev/manage/organizing_work.erb") %>
-
-#### Estimation
-
-<%= partial("handbook/engineering/development/dev/manage/estimation.erb") %>
-
-#### Planning
-
-<%= partial("handbook/engineering/development/dev/manage/planning.erb") %>
-
-#### During a release
-
-<%= partial("handbook/engineering/development/dev/manage/release.erb") %>
-
-#### Release posts
-
-<%= partial("handbook/engineering/development/dev/manage/release_posts.erb") %>
-
-#### Proof-of-concept MRs
-
-<%= partial("handbook/engineering/development/dev/manage/pocs.erb") %>
+### Proof-of-concept MRs
+<%= partial("handbook/engineering/development/dev/manage/compliance/pocs.erb") %>
 
 ### Working on unscheduled issues
+<%= partial("handbook/engineering/development/dev/manage/compliance/unscheduled_issues.erb") %>
 
-<%= partial("handbook/engineering/development/dev/manage/unscheduled_issues.erb") %>
 
-### Additional considerations
+## Milestone Planning
+We plan in monthly cycles in accordance with our [Product Development Timeline](/handbook/engineering/workflow/#product-development-timeline). Our typical planning cycle is suggested to look like:
 
-<%= partial("handbook/engineering/development/dev/manage/compliance_processes.erb") %>
+### Pre-planning
+<%= partial("handbook/engineering/development/dev/manage/compliance/pre_planning.erb") %>
+
+### Planning
+<%= partial("handbook/engineering/development/dev/manage/compliance/planning.erb") %>
+
+### Issue Prioritization
+<%= partial("handbook/engineering/development/dev/manage/compliance/prioritization.erb") %>
+
+## During Milestone
+<%= partial("handbook/engineering/development/dev/manage/compliance/release.erb") %>
+
+### Development Flow
+<%= partial("handbook/engineering/development/dev/manage/compliance/development_flow.erb") %>
+
+### Discovery/Refinement
+<%= partial("handbook/engineering/development/dev/manage/compliance/refinement.erb") %>
+
+#### Backlog
+<%= partial("handbook/engineering/development/dev/manage/compliance/backlog.erb") %>
+
+#### Estimation
+<%= partial("handbook/engineering/development/dev/manage/compliance/estimation.erb") %>
+
+#### Implmentation Plan
+<%= partial("handbook/engineering/development/dev/manage/compliance/plan.erb") %>
+
+#### Breaking down or promoting issues
+<%= partial("handbook/engineering/development/dev/manage/compliance/promote_issues.erb") %>
+
+### Release posts
+<%= partial("handbook/engineering/development/dev/manage/compliance/release_posts.erb") %>
 
 
 ## Meetings
-
-Although we have a bias for asynchronous communication, synchronous meetings are necessary and should adhere to our [communication guidelines](/handbook/communication/#video-calls). Some regular meetings that take place in Manage are:
-
-| Frequency | Meeting                              | DRI         | Possible topics                                                                                        |
-|-----------|--------------------------------------|-------------|--------------------------------------------------------------------------------------------------------|
-| Weekly    | Group-level meeting                  | Engineering Managers | Ensure current release is on track by walking the board, unblock specific issues                       |
-| Monthly   | Planning meetings                    | Product Managers         | See [Planning](/handbook/engineering/development/dev/manage/#planning) section |
-
-For one-off, topic specific meetings, please always consider recording these calls and sharing them (or taking notes in a [publicly available document](https://docs.google.com/document/d/1kE8udlwjAiMjZW4p1yARUPNmBgHYReK4Ks5xOJW6Tdw/edit)).
-
-Agenda documents and recordings can be placed in the [shared Google drive](https://drive.google.com/drive/u/0/folders/0ALpc3GhrDkKwUk9PVA) (internal only) as a single source of truth.
-
-Meetings that are not 1:1s or covering confidential topics should be added to the Manage Shared calendar.
-
-All meetings should have an agenda prepared at least 12 hours in advance. If this is not the case, you are not obligated to attend the meeting. Consider meetings canceled if they do not have an agenda by the start time of the meeting.
+<%= partial("handbook/engineering/development/dev/manage/compliance/meetings.erb") %>
 
 
 ## Group Members
-
 The following people are permanent members of the group:
 
+<%= stable_counterparts(role_regexp: /Govern.+Compliance/) %>
 <%= stable_counterparts(role_regexp: /Manage.+Compliance/) %>
 
 ## Dashboards 
 
-- [Product performance indicators / North star metrics](https://app.periscopedata.com/app/gitlab/663045/Manage:-Compliance-Dashboard)
+#### Product
+[Product performance indicators / North star metrics](https://app.periscopedata.com/app/gitlab/663045/Manage:-Compliance-Dashboard)
 
+<%= partial "handbook/engineering/metrics/partials/_cross_functional_dashboard.erb", locals: { filter_value: 'compliance' } %>
 
 ## Links and resources
 {: #links}
 
 <%= partial("handbook/engineering/development/dev/manage/shared_links.erb") %>
-* [Milestone retrospectives](https://gitlab.com/gl-retrospectives/manage-stage/compliance/-/issues)
+* [Milestone retrospectives](https://gitlab.com/gl-retrospectives/govern-sub-department/compliance/-/issues)
 * Our Slack channels
   * Govern:Compliance [#g_govern_compliance](https://gitlab.slack.com/messages/CN7C8029H)
   * Daily standups [#g_govern_compliance_standup](https://gitlab.slack.com/archives/C013E163FD0)
 * Issue boards
-  * Compliance [build board](https://gitlab.com/groups/gitlab-org/-/boards/1305010) and [refinement board](https://gitlab.com/groups/gitlab-org/-/boards/2600795)
+  * Compliance [build board](https://gitlab.com/groups/gitlab-org/-/boards/1305010) and [planning board](https://gitlab.com/groups/gitlab-org/-/boards/4657720)
