Add Peter Lu to team page

--- a/sites/handbook/source/handbook/engineering/development/enablement/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/enablement/index.html.md.erb
@@ -38,7 +38,7 @@ Enablement focuses on improving our capabilities and metrics in the following ar
   departments = [
     { name: 'Database', manager: 'alexives' },
     { name: 'Distribution:Build', manager: 'david-mountney', regexp: /Build/  },
-    { name: 'Distribution:Deploy', manager: 'david-mountney', regexp: /Deploy/ },
+    { name: 'Distribution:Deploy', manager: 'plu8', regexp: /Deploy/ },
     { name: 'Geo', manager: 'juan-silva' },
     { name: 'Gitaly', manager: 'andrashorvath' },
     { name: 'Global Search', manager: 'cliu', regexp: /Global Search/ },
