--- a/sites/handbook/source/handbook/engineering/development/enablement/systems/distribution/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/enablement/systems/distribution/index.html.md.erb
@@ -119,7 +119,7 @@ The following people are members of the Distribution:Build Team:
 
 The following people are members of the Distribution:Deploy Team:
 
-<%= direct_team(manager_slug: 'david-mountney', role_regexp: /Deploy/) %>
+<%= direct_team(manager_slug: 'plu8', role_regexp: /Deploy/) %>
 
 ### Stable counterparts
 
