tweaks to ensure proper spacing on citations at bottom (paragraphs - new lines weren't happening)

--- a/sites/uncategorized/source/blog/blog-posts/2022-10-31-a-snapshot-of-modern-devops-practices-today.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-10-31-a-snapshot-of-modern-devops-practices-today.html.md.erb
@@ -68,6 +68,8 @@ Roughly 66% of our 2022 DevSecOps Survey respondents told us their DevOps practi
 With the Internet of Things and 5G becoming larger on the horizon, it’s not much of a stretch to predict modern DevOps teams will need to be able to support products with data literally [“on the edge.”](https://www.techtarget.com/searchdatacenter/definition/edge-computing) 
 
 
-[1] 451 Research, a part of S&P Global Market Intelligence, Mature DevOps Means Business, Jay Lyman, Senior Research Analyst, June 2022
-[2] 451 Research, a part of S&P Global Market Intelligence, Business Objectives and Benefits Become Top Priority - Highlights from VotE DevOps, Jay Lyman, Senior Research Analyst, April 2022
-[3] IDC, U.S. Accelerated Application Delivery Survey, Doc #US47924622, Jan 2022
+#### [1] 451 Research, a part of S&P Global Market Intelligence, Mature DevOps Means Business, Jay Lyman, Senior Research Analyst, June 2022
+
+#### [2] 451 Research, a part of S&P Global Market Intelligence, Business Objectives and Benefits Become Top Priority - Highlights from VotE DevOps, Jay Lyman, Senior Research Analyst, April 2022
+
+####[3] IDC, U.S. Accelerated Application Delivery Survey, Doc #US47924622, Jan 2022
