Infra Handbook: Add links to Delivery/Scalability triage workflows

--- a/sites/handbook/source/handbook/engineering/infrastructure/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/infrastructure/index.html.md.erb
@@ -118,9 +118,11 @@ The Infrastructure Department is comprised of three distinct groups:
 To create an issue for the related teams you can use the links below:
 
 * [Delivery](https://gitlab.com/gitlab-com/gl-infra/delivery/-/issues/new)
+  * To learn more about how Delivery [prioritizes issues you can read this page](https://about.gitlab.com/handbook/engineering/infrastructure/team/delivery/#priority-labels).
 * [Reliability](https://gitlab.com/gitlab-com/gl-infra/reliability/-/issues/new?issuable_template=default)
   * To learn more about how these issues are triaged you can [read more about how reliability triages issues here.](https://about.gitlab.com/handbook/engineering/infrastructure/team/reliability/issues.html#issue-board)
 * [Scalability](https://gitlab.com/gitlab-com/gl-infra/scalability/-/issues/new)
+  * The following page [explains how to engage with the Scalability Group.](https://about.gitlab.com/handbook/engineering/infrastructure/team/scalability/#working-with-us)
 
 
 
