Add department for digital exp jobs

--- a/sites/uncategorized/source/jobs/all-jobs/index.html.haml
+++ b/sites/uncategorized/source/jobs/all-jobs/index.html.haml
@@ -58,6 +58,8 @@ extra_js:
               %ul#jobs-desc-marketing__content.job--list
               %h6.accordion-subheader.mt-3.mb-2 Digital Marketing
               %ul#jobs-desc-marketing__digital.job--list
+              %h6.accordion-subheader.mt-3.mb-2 Digital Experience
+              %ul#jobs-desc-marketing__digital exp.job--list
               %h6.accordion-subheader.mt-3.mb-2 Field Marketing
               %ul#jobs-desc-marketing__field.job--list
               %h6.accordion-subheader.mt-3.mb-2 Product Marketing
