Compliance Group - Add links to DRI definition

--- a/sites/handbook/source/handbook/engineering/development/dev/manage/compliance/_development_flow.erb
+++ b/sites/handbook/source/handbook/engineering/development/dev/manage/compliance/_development_flow.erb
@@ -7,7 +7,7 @@ We generally follow the [Product Development Flow](/handbook/product-development
 1. `workflow::ready for development`
 1. `workflow::in dev`
 1. `workflow::in review`
-1. `workflow::verification` - code is in production and pending verification by the DRI engineer
+1. `workflow::verification` - code is in production and pending verification by the [DRI](/handbook/people-group/directly-responsible-individuals/) engineer
 
 Generally speaking, issues are in one of two states:
 * Discovery/refinement (1-4): we're still answering questions that prevent us from starting development,
