--- a/sites/handbook/source/handbook/engineering/development/dev/manage/compliance/_plan.erb
+++ b/sites/handbook/source/handbook/engineering/development/dev/manage/compliance/_plan.erb
@@ -1,6 +1,6 @@
 For engineers, you may want to create an implementation approach when moving an issue out of `~workflow::planning breakdown`. A proposed implementation approach isn't required to be followed, but is helpful to justify a recorded weight.
 
-As the DRI for `workflow::planning breakdown`, consider following the example below to signal the end of your watch and the issues preparedness to move into scheduling. While more straightforward issues that have already been broken down may use a shorter format, the plan should (at a minimum) always justify the "why" behind an estimation.
+As the [DRI](/handbook/people-group/directly-responsible-individuals/) for `workflow::planning breakdown`, consider following the example below to signal the end of your watch and the issues preparedness to move into scheduling. While more straightforward issues that have already been broken down may use a shorter format, the plan should (at a minimum) always justify the "why" behind an estimation.
 
 The following is an example of an implementation approach from [https://gitlab.com/gitlab-org/gitlab/-/issues/247900#implementation-plan](https://gitlab.com/gitlab-org/gitlab/-/issues/247900#implementation-plan). It illustrates that the issue should likely be broken down into smaller sub-issues for each part of the work:
 
@@ -31,7 +31,7 @@ The following is an example of an implementation approach from [https://gitlab.c
 1. Tests tests and more tests :muscle:
 ```
 
-The DRI is **highly** recommended to ping a relevant counterpart or domain expert if an issue covers multiple
+The [DRI](/handbook/people-group/directly-responsible-individuals/) is **highly** recommended to ping a relevant counterpart or domain expert if an issue covers multiple
 disciplines (for example backend and frontend) before moving the issue to `workflow::scheduling`. This gives
 the domain expert the opportunity to approve the implementation plan or raise any potential pitfalls or
 concerns before work begins.
