adding People Analytics to Data Program Team list

--- a/sites/handbook/source/handbook/business-technology/data-team/index.html.md.erb
+++ b/sites/handbook/source/handbook/business-technology/data-team/index.html.md.erb
@@ -52,6 +52,7 @@ The teams which compose the GitLab Data Program include:
 * [Finance Analytics & Insights](/handbook/business-technology/data-team/analytics-and-insights/)
 * [Marketing Strategy and Performance](/handbook/marketing/strategy-performance/)
 * [Marketing Web Analytics](/handbook/marketing/inbound-marketing/search-marketing/analytics/)
+* [People Analytics Team](/handbook/people-group/people-ops-tech-analytics/people-analytics/)
 * [Product Analysis Group](/handbook/product/product-analysis/)
 * [Product Intelligence Group](/handbook/engineering/development/analytics/product-intelligence/)
 * [Sales Analytics](/handbook/sales/field-operations/sales-strategy/)
