Add Runner SaaS group to Verify page

--- a/sites/handbook/source/handbook/engineering/development/ops/verify/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/ops/verify/index.html.md.erb
@@ -22,11 +22,12 @@ We take ownership of the things we build, with a focus on stability and availabi
 
 ## Who we are
 
-The Verify stage is made up of 4 groups:
+The Verify stage is made up of 5 groups:
 
 1. [Verify:Pipeline Execution](/handbook/engineering/development/ops/verify/pipeline-execution/)
 1. [Verify:Pipeline Authoring](/handbook/engineering/development/ops/verify/pipeline-authoring/)
 1. [Verify:Runner](/handbook/engineering/development/ops/verify/runner/)
+1. [Verify:Runner SaaS](/handbook/engineering/development/ops/verify/runner-saas/)
 1. [Verify:Pipeline Insights](/handbook/engineering/development/ops/verify/pipeline-insights/)
 
 ## UX Strategy
