Update security policies priorities to categories page

--- a/sites/handbook/source/handbook/engineering/development/sec/govern/security-policies/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/sec/govern/security-policies/index.html.md.erb
@@ -24,7 +24,7 @@ We are responsible for developing solutions to give customers the functionality 
 
 ### Prioritization
 
-We use our [Security Policies Priorities](https://gitlab.com/gitlab-org/gitlab/-/issues/222791) issue to track what we are doing, and what order to do it in.  Each initiative includes these fields:
+We use our [Security Policies Priorities](/direction/govern/security_policies/security_policy_management/#priorities) list in our direction page to track what we are doing, and what order to do it in.  Each initiative includes these fields:
 
 1. Name - Description and link to the epic
 1. BE DRI / FE DRI - indicates the backend and frontend [DRIs](/handbook/engineering/development/sec/govern/planning/#epic-engineering-dri) who will be actively involved. 
