updated SBoM to meet new style SBOM

--- a/sites/uncategorized/source/blog/blog-posts/2022-10-17-fast-and-efficient-sbom-with-gitlab-and-rezilion.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-10-17-fast-and-efficient-sbom-with-gitlab-and-rezilion.html.md.erb
@@ -1,11 +1,11 @@
 ---
-title: Meet the demand for SBoMs and supply chain security with GitLab and Rezilion
+title: Meet the demand for SBOMs and supply chain security with GitLab and Rezilion
 author: Fernando Diaz
 author_gitlab: fjdiaz
 author_twitter: awkwardferny
 categories: security
 tags: security, partners, integrations
-description: Learn the role of SBoMs in helping to secure your software supply chain and how to generate them with the GitLab + Rezilion integration.
+description: Learn the role of SBOMs in helping to secure your software supply chain and how to generate them with the GitLab + Rezilion integration.
 image_title: /images/blogimages/fast-and-efficient-supply-chain-security-with-rezilion-and-gitlab/jessica-lewis-fJXv46LT7Xk-unsplash.jpeg
 twitter_text: Fast and efficient supply chain security with @GitLab + @_Rezilion
 ---
@@ -14,15 +14,15 @@ function for use in an application. However, there is one caveat: These
 dependencies may be susceptible to security vulnerabilities, which may render
 your whole application – and possibly your software supply chain – as vulnerable.
 
-That is why DevOps teams must be able to generate a software bill of materials, or [SBoM](https://docs.gitlab.com/ee/user/application_security/dependency_list/). GitLab has partnered with [Rezilion](/partners/technology-partners/#rezilion) to make this task easier.
+That is why DevOps teams must be able to generate a software bill of materials, or [SBOM](https://docs.gitlab.com/ee/user/application_security/dependency_list/). GitLab has partnered with [Rezilion](/partners/technology-partners/#rezilion) to make this task easier.
 
-## The need for SBoMs
+## The need for SBOMs
 
 In 2020, the [Solar Winds software supply chain attack happened](https://www.businessinsider.com/solarwinds-hack-explained-government-agencies-cyber-security-2020-12). Hackers used an easy-to-guess password to inject malicious
 code into a software update and many users of the affected Solar Winds product
 Orion, including government agencies, had their data compromised.
 
-This breach, along with other high-profile attacks, led Pres. Biden's administration to [require software vendors to deliver a software bill of materials (SBoM)](https://www.whitehouse.gov/briefing-room/presidential-actions/2021/05/12/executive-order-on-improving-the-nations-cybersecurity/) with any software offer they make to federal agencies.
+This breach, along with other high-profile attacks, led Pres. Biden's administration to [require software vendors to deliver a software bill of materials (SBOM)](https://www.whitehouse.gov/briefing-room/presidential-actions/2021/05/12/executive-order-on-improving-the-nations-cybersecurity/) with any software offer they make to federal agencies.
 
 ## Secure your software and manage vulnerabilities
 
