Fix typos and commas

--- a/source/direction/plan/dora_metrics/index.html.md.erb
+++ b/source/direction/plan/dora_metrics/index.html.md.erb
@@ -27,7 +27,7 @@ Thanks for visiting the DORA Metrics direction page. This page is actively maint
 
 ### Vision
 
-GitLab will be the tool of choice for the data-driven DevOps organization — enabling teams and managers to understand all aspects of productivity, quality and delivery without any complex configurations or data scientists.
+GitLab will be the tool of choice for the data-driven DevOps organization — enabling teams and managers to understand all aspects of productivity, quality, and delivery without any complex configurations or data scientists.
 
 ### Who are we focusing on?
 
@@ -91,7 +91,7 @@ This category is currently **Minimal**. Our next step is **Viable** ([see epic](
 ### Competitive Landscape
 
 #### Tasktop
-[TaskTop](https://www.tasktop.com/integration-hub) is exclusively focused on Value Stream Management and allows users to connect more than 50 tools together, including Atlassian's JIRA, GitLab, GitHub, JamaSoftware, CollabNet VersionOne, Xebia Labs, and TargetProcess to name a few. Tasktop serves as an integration layer on top of all the software development tools that a team uses and allows for mapping of processes and people in order to achieve a common data model across the toolchain. End users can visualize the flows between the different tools and the data can be exported to a database for visualization through BI tools.
+[Tasktop](https://www.tasktop.com/integration-hub) is exclusively focused on Value Stream Management and allows users to connect more than 50 tools together, including Atlassian's JIRA, GitLab, GitHub, JamaSoftware, CollabNet VersionOne, Xebia Labs, and TargetProcess to name a few. Tasktop serves as an integration layer on top of all the software development tools that a team uses and allows for mapping of processes and people in order to achieve a common data model across the toolchain. End users can visualize the flows between the different tools and the data can be exported to a database for visualization through BI tools.
 
 While we understand that not all users of GitLab utilize all of our stages, we believe that there is already a lot of information across planning, source code management and continuous integration and deployment, which can be used to deliver valuable insights.
 
@@ -103,11 +103,11 @@ We are starting to build dashboards, which can help end users visualize a custom
 #### Plutora
 [Plutora Analytics](https://www.plutora.com/platform/plutora-analytics) seem to target mainly the release managers with their [Time to Value Dashboard](https://www.plutora.com/platform/time-to-value-dashboard). The company also integrates with JIRA, Jenkins, GitLab, CollabNet VersionOne, etc but there is still a lot of configuration that seems to be left to the user.
 
-#### TargetProcess
+#### Targetprocess
 [Targetprocess](https://www.targetprocess.com) tries to provide a full overview of the delivery process and integrates with Jenkins, GitHub and JIRA. The company also provides customizable dashboards that can give an overview over the process from ideation to delivery.
 
 #### GitPrime
-Although [GitPrime](https://www.gitprime.com) doesn't try to provide a value stream management solution, it focuses on productivity metrics and cycle time by looking at the productivity of a team. It exclusively uses only git data.
+Although [GitPrime](https://www.gitprime.com) doesn't try to provide a value stream management solution, it focuses on productivity metrics and cycle time by looking at the productivity of a team. It uses only git data.
 
 #### Azure DevOps
 Naturally, [Azure](https://docs.microsoft.com/en-us/azure/devops/report/dashboards/analytics-widgets?view=azure-devops) is working on adding analytics that can help engineering teams become more effective but it's still in very early stages. It has also recently acquired [PullPanda](https://pullpanda.com).
@@ -128,10 +128,10 @@ Similarly to GitPrime, [Gitalytics](https://gitalytics.com) focuses on the team 
 [Gitlean](https://gitlean.com)
 
 #### XebiaLabs
-[XebiaLabs' analytics](https://docs.xebialabs.com/xl-release/concept/release-dashboard-tiles.html) are predominantly focused on the Release Manager and give useful overviews of deployments, issue throughput and stages. The company integrates with JIRA, Jenkins, etc and end users can see in which stage of the release process they are.
+[XebiaLabs' analytics](https://docs.xebialabs.com/xl-release/concept/release-dashboard-tiles.html) are predominantly focused on the Release Manager and give useful overviews of deployments, issue throughput and stages. The company integrates with JIRA, Jenkins, etc., and end users can see in which stage of the release process they are.
 
 #### CloudBees
-[CloudBees DevOptics](https://www.cloudbees.com/products/cloudbees-devoptics) is focused on giving visibility and insights to measure, manage and optimize the software delivery value stream. It allows comparisons across teams and integrates with Jenkins and Jira and SVM /VCS solutions.
+[CloudBees DevOptics](https://www.cloudbees.com/products/cloudbees-devoptics) is focused on giving visibility and insights to measure, manage, and optimize the software delivery value stream. It allows comparisons across teams and integrates with Jenkins and Jira and SVM /VCS solutions.
 
 #### CA Technologies
 [CA Agile Central](https://docs.ca.com/en-us/ca-agile-central/saas/iteration-burndown) combines data across the planning process in a single integrated page with custom applications available to CA Agile Central users. The applications can be installed in custom pages within CA Agile Central or on a dashboard.
@@ -165,13 +165,13 @@ Forrester’s vision for VSM includes:
 - end-to-end visibility of the software development process, including the corresponding capture and storage of data, events, and artifacts
 - definition and visualization of key performance indicators (KPIs)
 - inclusive customer experience, which allows multiple roles (PMs, developers, QA, and release managers) to collaborate in one place
-- governance, i.e. a framework to monitor compliance to organizational standards, automated audit capabilities and traceability.
+- governance, i.e. a framework to monitor compliance to organizational standards, automated audit capabilities, and traceability.
 
-Other Analysts have highlighted that Gitlab data gathering has much to offer and much more to mine and enable the insight generation. We have an immediate opportunity i to extend the insight generation based on the data gathered in the delivery pipelines. Once this is achieved we will integrate additional data sources beyond the DevOps toolchains.
+Other Analysts have highlighted that GitLab data gathering has much to offer and much more to mine and enable the insight generation. We have an immediate opportunity to extend the insight generation based on the data gathered in the delivery pipelines. Once this is achieved we will integrate additional data sources beyond the DevOps toolchains.
 
-We have the ability to reach the decision makers that are onsuming the insights generated from the Gitlab platform, and one of the key elements here is getting beyond the DORA 4 metrics into those that are more specifically targeted: security, compliance, financial, product, but also enterprise architecture, AI/ML delivery teams and the like.
+We have the ability to reach the decision makers that are consuming the insights generated from the GitLab platform, and one of the key elements here is getting beyond the DORA 4 metrics into those that are more specifically targeted: security, compliance, financial, product, but also enterprise architecture, AI/ML delivery teams and the like.
 
-Additional functionality, requested by clients includes:
+Additional functionality, requested by clients, includes:
 - integration with other tools, including the ability to double-click into each tool to directly observe status or take action
 - business value custom definitions in terms of financials, time, effort or similar
 - mapping of business value, people, processes, data
