Fix including typo

--- a/sites/handbook/source/handbook/board-meetings/index.html.md.erb
+++ b/sites/handbook/source/handbook/board-meetings/index.html.md.erb
@@ -359,7 +359,7 @@ Board member onboarding from a GitLab orientation perspective:
 
 #### CLO DRI
 New Director will be be provided with:
-1. Links to relevant Handbook pages, inclduing:
+1. Links to relevant Handbook pages, including:
   - Committee Membership
   - Committee Charters
   - Code of Conduct
