--- a/source/direction/release/environment_management/index.html.md.erb
+++ b/source/direction/release/environment_management/index.html.md.erb
@@ -44,6 +44,7 @@ Through the use of Environments in GitLab, teams can easily understand and take 
 ## Maturity Plan
 
 ## What's next
+We are focusing on iterations to the deployment approval feature to support customer use cases and a streamlined configuration experience, enabling users to easily find and manage their environments in the UI, and how to view deployments across multiple environments/projects. One feature of note that we are scoping is to [Add Environments support to the GitLab Agent](https://gitlab.com/gitlab-org/gitlab/-/issues/352186).
 
 ### Theme: Cross-stage and cross-feature initiatives
 - Enhancing Environments with integrations with other capabilities in GitLab ([link to deployment commit](https://gitlab.com/gitlab-org/gitlab/-/issues/364700), [link to deployment pipeline](https://gitlab.com/gitlab-org/gitlab/-/issues/364699), [show related tags to deployed commit](https://gitlab.com/gitlab-org/gitlab/-/issues/15419), [to releases](https://gitlab.com/gitlab-org/gitlab/-/issues/332103))
@@ -60,7 +61,10 @@ Through the use of Environments in GitLab, teams can easily understand and take 
 
 ### Specific issues and epics
 
+1. [Support Approval Rules in Deployment Approval UI](https://gitlab.com/gitlab-org/gitlab/-/issues/355708)
+1. [Allow to search environments within folders](https://gitlab.com/gitlab-org/gitlab/-/issues/373850)
 1. [Show tags related to deployed commit on Environment Detail Page](https://gitlab.com/gitlab-org/gitlab/-/issues/370400)
+1. [Deployment Detail Page MVC - Deploy Approval](https://gitlab.com/gitlab-org/gitlab/-/issues/374538)
 1. [Org-level Environment Management](https://gitlab.com/groups/gitlab-org/-/epics/7558)
 1. [Environments cleanup](https://gitlab.com/groups/gitlab-org/-/epics/5920)
 1. [Deployment detail page MVC](https://gitlab.com/gitlab-org/gitlab/-/issues/374538)
