--- a/sites/handbook/source/handbook/engineering/development/ops/verify/pipeline-execution/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/ops/verify/pipeline-execution/index.html.md.erb
@@ -52,13 +52,7 @@ This section will list the top three most recent, exciting accomplishments from 
 
 ## Team Members
 
-The following people are permanent members of the Verify:Pipeline Execution group:
-
-### Backend
-<%= direct_team(manager_role: 'Backend Engineering Manager, Verify:Pipeline Execution', role_regexp: /Pipeline Execution/) %>
-
-### Frontend
-<%= direct_team(manager_role: 'Frontend Engineering Manager, Verify', role_regexp: /Pipeline Execution/) %>
+<%= direct_team(manager_role: 'Fullstack Engineering Manager, Verify:Pipeline Execution') %>
 
 ## Stable Counterparts
 
