Add Arty to Acting CoS to CTO rotation

--- a/sites/handbook/source/handbook/engineering/cto-staff/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/cto-staff/index.html.md.erb
@@ -117,3 +117,4 @@ Candidates who are not selected for the upcoming rotation, but are eligible, wil
 | FY23 Q1 | Sean McGivern |
 | FY23 Q2 | Matt Nohr     |
 | FY23 Q3 | Sam Beckham   |
+| FY23 Q4 | Cynthia "Arty" Ng |
